2005-11-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* configure.in:
	* src/gnome-phone-manager.desktop.in: install the icons and other UI
	bits by hand, fixes the desktop menu icon not appearing
	(Closes: #321882)

2005-10-11  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-09-22  Bastien Nocera  <hadess@hadess.net>

	* configure.in: add pl to ALL_LINGUAS

2005-09-10  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_connect):
	Fix dummy build

2005-09-10  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_error_quark),
	(phonemgr_listener_connect):
	* libgsm/phonemgr-listener.h:
	* libgsm/phonemgr-utils.c: (phonemgr_utils_gn_error_to_string),
	(phonemgr_utils_guess_driver):
	* libgsm/phonemgr-utils.h:
	* src/connection.c: (connect_phone_thread):
	Some work towards adding better error reporting, especially on
	new connections

2005-09-10  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_connect):
	* libgsm/phonemgr-utils.c:
	* libgsm/phonemgr-utils.h: Print out which driver we are using, and
	errors when gn_gsm_initialise fails

2005-09-09  Bastien Nocera  <hadess@hadess.net>

	* libgsm/Makefile.am:
	* libgsm/phonemgr-utils.c: (phonemgr_utils_driver_parse_start_tag),
	(totem_driver_model_free), (phonemgr_utils_start_parse),
	(phonemgr_utils_init_hash_tables):
	* libgsm/phones.xml:
	Move the model/driver match to an xml file to avoid having to
	rebuild gnome-phone-manager to add support for more phones
	(Closes: #315630)

2005-09-09  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require gnokii 0.6.5 to compile (Closes: #315628)

2005-09-09  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c: (phonemgr_utils_init_hash_tables):
	Add support for the Nokia 6021 and Nokia 6230, with help from
	Frederic Crozat <fcrozat@mandriva.com>

============ Version 0.6
